// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot LabbookPaginationLoader LabbookPaginationLoader isLoading false 1`] = `
<div
  className="Labbook__loader-hidden"
>
  <div />
</div>
`;

exports[`Snapshot LabbookPaginationLoader LabbookPaginationLoader isLoading true 1`] = `
<div
  className="LocalLabbooks__panel column-4-span-3 flex flex--column justify--space-between Labbook-paginating Labbook-paginating__loader--undefined"
>
  <div />
</div>
`;
